Added clang format

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,15 @@
 set(TARGET_NAME "shared_types_lib")
 
-set(TARGET_HEADERS
-	shared_types/test.h
+set(HEADER_FILES
+    shared_types/models/Control.h
+    shared_types/serializers/ControlSerializer.hpp
 )
 
-set(TARGET_SOURCES
-	shared_types/test.cpp
+set(SOURCE_FILES
+    shared_types/models/Control.cpp
 )
 
-add_library(${TARGET_NAME} STATIC ${TARGET_HEADERS} ${TARGET_SOURCES})
+add_library(${TARGET_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
 find_package(nlohmann_json CONFIG REQUIRED)
 target_link_libraries(${TARGET_NAME} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
