--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,5 +11,8 @@ set(SOURCE_FILES
 
 add_library(${TARGET_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 
+target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} shared_types)
+
 find_package(nlohmann_json CONFIG REQUIRED)
 target_link_libraries(${TARGET_NAME} PRIVATE nlohmann_json nlohmann_json::nlohmann_json)
+
