Started adding test cmake structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,6 @@ configure_file(VersionConfig.h.in VersionConfig.h)
 add_subdirectory("include")
 add_subdirectory("src")
 add_subdirectory("apps")
+
+# TODO: add only if passed parameter -DADD_TESTS=ON
+add_subdirectory("tests")
