Does not compile. Can't find gtest definitions

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(${TARGET_NAME}
     main.cpp
 )
 
-target_link_libraries(${TARGET_NAME} PUBLIC "shared_types_lib" "shared_types_include")
+target_link_libraries(${TARGET_NAME} PRIVATE "shared_types_lib" "shared_types_include")
 ADDJSON(${TARGET_NAME})
