--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SOURCE_FILES
 )
 
 add_library(${TARGET_NAME} ${SOURCE_FILES})
-target_link_libraries(${TARGET_NAME} PUBLIC "shared_types_include")
+target_link_libraries(${TARGET_NAME} PRIVATE "shared_types_include")
