Removed quotes from CMakeLists.txt

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-set(TARGET_NAME "shared_types_lib")
+set(TARGET_NAME shared_types_lib)
 
 set(SOURCE_FILES
     Control.cpp
 )
 
 add_library(${TARGET_NAME} ${SOURCE_FILES})
-target_link_libraries(${TARGET_NAME} PRIVATE "shared_types_include")
+target_link_libraries(${TARGET_NAME} PRIVATE shared_types_include)
