--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,18 @@
-include("extern_libs")
-include("GoogleTest")
+include(extern_libs)
+include(GoogleTest)
 
-set(TARGET_NAME "shared_types_tests")
-add_executable(${TARGET_NAME}
+set(TARGET_NAME shared_types_tests)
+
+set(SOURCE_FILES
     main.cpp
+    test_serializers/ControlSerializerTest.cpp
 )
 
-target_link_libraries(${TARGET_NAME} PUBLIC "shared_types_lib" "shared_types_include")
+add_executable(${TARGET_NAME}
+    ${SOURCE_FILES}
+)
+
+target_link_libraries(${TARGET_NAME} PUBLIC shared_types_lib shared_types_include)
 
 ADDJSON(${TARGET_NAME})
 
@@ -15,7 +21,7 @@ FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/53495a2a7d6ba7e0691a7f3602e9a5324bba6e45.zip
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
+
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
