--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 project("shared_types" VERSION 1.0.0)
 configure_file(VersionConfig.h.in VersionConfig.h)
 
-add_subdirectory("include")
-add_subdirectory("src")
-add_subdirectory("apps")
+add_subdirectory(include)
+add_subdirectory(src)
+add_subdirectory(apps)
 
 # TODO: add only if passed parameter -DADD_TESTS=ON
 
-add_subdirectory("tests")
+add_subdirectory(tests)
