--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,9 +1,11 @@
-include("extern_libs")
+# REMOVE THIS DIRECTORY AFTER IMPLEMENTING THIS BUILD STRUCTURE IN ANTICARIUM_DESKTOP!!
 
-set(TARGET_NAME "shared_types_app")
+include(extern_libs)
+
+set(TARGET_NAME shared_types_app)
 add_executable(${TARGET_NAME}
     main.cpp
 )
 
-target_link_libraries(${TARGET_NAME} PRIVATE "shared_types_lib" "shared_types_include")
+target_link_libraries(${TARGET_NAME} PRIVATE shared_types_lib shared_types_include)
 ADDJSON(${TARGET_NAME})
