Added test data dir path string header

--- a/VersionConfig.h.in
+++ b/VersionConfig.h.in
@@ -1,5 +1,3 @@
-#ifndef APPLICATION_VERSION_FILE
-#define APPLICATION_VERSION_FILE
+#pragma once
 
 #define SHARED_TYPES_VERSION "@TARGET_VERSION@"
-#endif
