--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ include(extern_libs)
 include(GoogleTest)
 
 set(TARGET_NAME shared_types_tests)
+set(TEST_DATA_DIR_HEADER_PATH ${CMAKE_BINARY_DIR}/tests/include/shared_types_tests)
 
 set(HEADER_FILES
     include/shared_types_tests/TestsUtility.hpp
@@ -16,7 +17,7 @@ add_executable(${TARGET_NAME}
     ${SOURCE_FILES}
 )
 
-target_include_directories(${TARGET_NAME} PRIVATE include)
+target_include_directories(${TARGET_NAME} PRIVATE include ${TEST_DATA_DIR_HEADER_PATH})
 target_link_libraries(${TARGET_NAME} PRIVATE shared_types_lib shared_types_include)
 
 ADDJSON(${TARGET_NAME})
@@ -35,3 +36,5 @@ gtest_discover_tests(${TARGET_NAME})
 
 find_package(Qt6 COMPONENTS Core REQUIRED)
 target_link_libraries(${TARGET_NAME} PRIVATE Qt6::Core)
+
+configure_file(TestDataDirectory.h.in  ${TEST_DATA_DIR_HEADER_PATH}/TestDataDirectory.h)
