Option to include or not to include tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,4 +12,6 @@ add_subdirectory(apps)
 
 # TODO: add only if passed parameter -DADD_TESTS=ON
 
-add_subdirectory(tests)
+if(ADD_TESTS)
+    add_subdirectory(tests)
+endif()
