--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TARGET_NAME shared_types_lib)
 
 set(SOURCE_FILES
     Control.cpp
+    RegimeRange.cpp
 )
 
 add_library(${TARGET_NAME} ${SOURCE_FILES})
