--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,12 +5,14 @@ set(TARGET_NAME shared_types_tests)
 set(TEST_DATA_DIR_HEADER_PATH ${CMAKE_BINARY_DIR}/tests/include/shared_types_tests)
 
 set(HEADER_FILES
-    include/shared_types_tests/TestsUtility.hpp
+    shared_types_tests/TestsUtility.h
 )
 
 set(SOURCE_FILES
     main.cpp
     serializers/ControlSerializerTest.cpp
+    serializers/RegimeRangeSerializerTest.cpp
+    shared_types_tests/TestsUtility.cpp
 )
 
 
@@ -21,7 +23,7 @@ add_executable(${TARGET_NAME}
 
 configure_file(TestDataDirectory.h.in  ${TEST_DATA_DIR_HEADER_PATH}/TestDataDirectory.h)
 
-target_include_directories(${TARGET_NAME} PRIVATE include ${TEST_DATA_DIR_HEADER_PATH})
+target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${TEST_DATA_DIR_HEADER_PATH})
 target_link_libraries(${TARGET_NAME} PRIVATE shared_types_lib shared_types_include)
 
 ADDJSON(${TARGET_NAME})
