--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCE_FILES
     serializers/ControlSerializerTest.cpp
     serializers/RegimeRangeSerializerTest.cpp
     serializers/RegimePropertySerializerTest.cpp
+    serializers/CustomRegimeSerializerTest.cpp
     shared_types_tests/TestsUtility.cpp
 )
 
