--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(TARGET_NAME shared_types)
-#set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/_deps)
+set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/_deps)
 
 FILE(READ VERSION CURRENT_VERSION)
 project(${TARGET_NAME} VERSION ${CURRENT_VERSION})
