--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -15,4 +15,7 @@ set(HEADER_FILES
 
 add_library(${TARGET_NAME} INTERFACE ${HEADER_FILES})
 
-target_include_directories(${TARGET_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}>)
+target_include_directories(${TARGET_NAME} INTERFACE
+    $<INSTALL_INTERFACE:include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    )
