--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,6 +3,8 @@ set(TARGET_NAME "shared_types_include")
 set(HEADER_FILES
     shared_types/Control.h
     shared_types/ControlSerializer.hpp
+    shared_types/SensorData.h
+    shared_types/SensorDataSerializer.hpp
     shared_types/RegimeRange.h
     shared_types/RegimeRangeSerializer.hpp
     shared_types/RegimeProperty.h
@@ -18,4 +20,7 @@ add_library(${TARGET_NAME} INTERFACE ${HEADER_FILES})
 target_include_directories(${TARGET_NAME} INTERFACE
     $<INSTALL_INTERFACE:include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    )
+)
+
+
+
