--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,11 @@ set(SOURCE_FILES
     RegimeProperty.cpp
     CustomRegime.cpp
     TerrariumData.cpp
+    SensorData.cpp
 )
 
+include(ExternLibs)
 add_library(${TARGET_NAME} ${SOURCE_FILES})
 target_link_libraries(${TARGET_NAME} PRIVATE shared_types_include)
 ADDQT6CORE(${TARGET_NAME})
+ADDJSON(${TARGET_NAME})
