--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -9,8 +9,8 @@ set(HEADER_FILES
     shared_types/RegimeValueSerializer.hpp
     shared_types/Regimes.h
     shared_types/RegimesSerializer.hpp
-    shared_types/RegimeName.h
-    shared_types/RegimeNameSerializer.hpp
+    shared_types/RegimeId.h
+    shared_types/RegimeIdSerializer.hpp
     shared_types/Regime.h
     shared_types/RegimeSerializer.hpp
     shared_types/SavedRegimes.h
